// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DropDownField rendering renders expected elements 1`] = `
<FieldWrapper
  className="DropDownField"
  helperId="random-id-helper"
  helperText="Helper text"
  id="random-id-label"
  label="Test"
>
  <Select
    aria-describedby="random-id-helper"
    aria-invalid={false}
    aria-labelledby="random-id-label"
    className="DropDownField__select"
    error={false}
    id="random-id"
    onChange={[MockFunction]}
    options={
      [
        "o0",
        "o1",
      ]
    }
    renderOption={[Function]}
    value="o0"
  />
</FieldWrapper>
`;

exports[`DropDownField rendering renders expected elements when optional properties are set 1`] = `
<FieldWrapper
  className="DropDownField TestClass"
  error="Error"
  helperId="random-id-helper"
  helperText="Helper text"
  id="random-id-label"
  label="Test"
  required={true}
>
  <Select
    aria-describedby="random-id-helper"
    aria-invalid={true}
    aria-labelledby="random-id-label"
    aria-required={true}
    className="DropDownField__select"
    disabled={true}
    error={true}
    id="random-id"
    onChange={[MockFunction]}
    options={
      [
        "o0",
        "o1",
      ]
    }
    renderOption={[Function]}
    value="o0"
  />
</FieldWrapper>
`;
